css/includes/base.css
/*
Colors set by Global Styles:
	--wp--preset--color--base: #fff;
	--wp--preset--color--base-2: #dce0e4;
	--wp--preset--color--contrast: #0f3236;
	--wp--preset--color--contrast-2: #49595b;
	--wp--preset--color--contrast-3: #808992;
	--wp--preset--color--accent: #ff4832;
	--wp--preset--color--accent-2: #0f6d55;
	--wp--preset--color--accent-3: #65b8aa;
	--wp--preset--color--accent-4: #085357;
	--wp--preset--color--accent-5: #c35140;

Font variable:
	--wp--preset--font-family--inclusive-sans: "Inclusive Sans", sans-serif;

	--wp--preset--font-size--small: 0.9rem;
	--wp--preset--font-size--medium: 1.05rem;
	--wp--preset--font-size--large: clamp(1.39rem, 1.39rem + ((1vw - 0.2rem) * 0.767), 1.85rem);
	--wp--preset--font-size--x-large: clamp(1.85rem, 1.85rem + ((1vw - 0.2rem) * 1.083), 2.5rem);
	--wp--preset--font-size--xx-large: clamp(2.5rem, 2.5rem + ((1vw - 0.2rem) * 1.283), 3.27rem);

Spacing variables:
	--wp--preset--spacing--10: 1rem;
	--wp--preset--spacing--20: min(1.5rem, 2vw);
	--wp--preset--spacing--30: min(2.5rem, 3vw);
	--wp--preset--spacing--40: min(4rem, 5vw);
	--wp--preset--spacing--50: min(6.5rem, 8vw);
	--wp--preset--spacing--60: min(10.5rem, 13vw);
*/

html {
	margin-top: var(--wp-admin--admin-bar--height, 0);
}

body {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	text-wrap: balance;
}

caption,
figcaption,
p,
ul,
ol,
blockquote {
	text-wrap: pretty;
}

/* Add default focus style. */
a:focus,
button:focus,
.wp-element-button:focus,
.wp-block-button__link:focus
input:focus,
input:focus-visible,
select:focus,
textarea:focus,
input[type="submit"]:focus,
input[type="button"]:focus,
input[type="reset"]:focus {
	outline-color: var(--wp--preset--color--contrast-2);
	outline-offset: 2px;
	outline-style: dashed;
	outline-width: 1px;
}

a:focus,
button:focus,
.wp-element-button:focus,
.wp-block-button__link:focus {
	border-radius: 2px;
}

/* Style default form elements */
input[type="submit"],
input[type="button"],
input[type="reset"] {
	border: none;
	background-color: var(--wp--preset--color--contrast);
	color: var(--wp--preset--color--base);
	font-family: var(--wp--preset--font-family--inclusive-sans);
	font-size: var(--wp--preset--font-size--medium);
	font-style: normal;
	font-weight: 500;
	line-height: inherit;
	border-radius: 0;
	padding-top: var(--wp--preset--spacing--10);
	padding-right: var(--wp--preset--spacing--30);
	padding-bottom: var(--wp--preset--spacing--10);
	padding-left: var(--wp--preset--spacing--30);

	&:hover {
		background-color: var(--wp--preset--color--contrast-2);
		color: var(--wp--preset--color--base);
	}

	&:focus {
		background-color: var(--wp--preset--color--contrast-2);
		border-color: var(--wp--preset--color--contrast-2);
		color: var(--wp--preset--color--base);
	}

	&:active {
		background-color: var(--wp--preset--color--contrast);
		color: var(--wp--preset--color--base);
	}
}

/* Jetpack Form overrides */
.contact-form .grunion-checkbox-multiple-options,
.contact-form .grunion-radio-options {

	p.contact-form-field {
		margin: 0;
	}
}

.contact-form .grunion-field-select-wrap {

	select {
		width: 100%;
	}
}

.contact-form .grunion-field-checkbox-wrap {

	.contact-form__checkbox-wrap {
		display: flex;
		align-items: flex-start;

		input {
			flex: 0;
			margin-block-start: 0.5em;
		}

		label {
			line-height: inherit;
		}
	}
}

.contact-form label span.grunion-label-required {
	opacity: 0.9 !important;
	color: var(--wp--preset--color--contrast-2);
}

/* Block overrides */

.wp-block-post-title {
	text-wrap: balance;
	overflow-wrap: initial;
	word-break: initial;
}

.wp-block-site-title a:where(:not(.wp-element-button)):hover {
	text-decoration: underline;
}

.wp-block-image a {
	display: inline-block;
}

@media (max-width: 999px) {

	#subscribe .wp-block-columns {
		flex-wrap: wrap !important;
	}

	#subscribe .wp-block-columns .wp-block-column {
		flex-basis: 100% !important;
	}
}

@media (max-width: 781px) {

	/* Image links on homepage */
	.image-links {
		flex-wrap: wrap !important;

		& img {
			max-width: 180px !important;
		}
	}

	footer.wp-block-template-part .wp-block-columns .wp-block-group {
		justify-content: flex-start;
	}
}

body.home footer.wp-block-template-part {
	margin-top: 0 !important;
}

body.home footer.wp-block-template-part .wp-block-group:first-child {
	padding-top: 0 !important;
}

